<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="100">

        <EditText
            android:id="@+id/serverURL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorInput"
            android:padding="@dimen/activity_view_padding"
            android:singleLine="true"
            android:hint="@string/placeholderURL"
            android:inputType="textWebEmailAddress"
            android:imeOptions="actionNext"
            android:textColor="@color/colorBlack"/>

        <EditText
            android:id="@+id/phoneID"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorInput"
            android:padding="@dimen/activity_view_padding"
            android:singleLine="true"
            android:layout_marginTop="10dp"
            android:hint="@string/placeholderPhoneID"
            android:imeOptions="actionNext"
            android:textColor="@color/colorBlack"/>

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorInput"
            android:padding="@dimen/activity_view_padding"
            android:singleLine="true"
            android:layout_marginTop="10dp"
            android:hint="@string/placeholderUserName"
            android:imeOptions="actionDone"
            android:textColor="@color/colorBlack"/>

        <Button
            android:id="@+id/downloadTags"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/downloadTagsButtonText"
            android:textColor="@color/colorWhite"
            android:textSize="20dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/clearDataButtonText"
            android:onClick="clearMessages"
            android:textColor="@color/colorWhite"
            android:textSize="20dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/saveChangesButtonText"
            android:onClick="saveSettings"
            android:textColor="@color/colorWhite"
            android:textSize="20dp" />

    </LinearLayout>

</ScrollView>