<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/mainRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="100">

        <TextView
            android:id="@+id/latLong"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/colorBlack"
            android:textAlignment="center"
            android:textSize="12dp"
            android:gravity="center_horizontal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_background"
            android:onClick="startCamera"
            android:text="@string/pictureButtonLabel"
            android:textColor="@color/colorWhite"
            android:textSize="20dp" />

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="0.47"
            android:src="@drawable/blank_image" />

        <Button
            android:id="@+id/soundButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_background"
            android:onClick="recordSound"
            android:text="@string/soundButtonLabel"
            android:textColor="@color/colorWhite"
            android:textSize="20dp" />

        <Button
            android:id="@+id/tagsButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="displayTags"
            android:text="@string/tagsButtonLabel"
            android:textColor="@color/colorWhite"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/newTag"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorInput"
            android:padding="@dimen/activity_view_padding"
            android:singleLine="true"
            android:layout_marginTop="10dp"
            android:hint="@string/placeholderNewTag"
            android:imeOptions="actionDone"
            android:textColor="@color/colorBlack"
            android:visibility="gone"/>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:onClick="preSaveMessage"
            android:text="@string/saveButtonText"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            android:visibility="gone" />

    </LinearLayout>

</ScrollView>
